compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_case_variable_name.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1386
expression: "case 21 { twentyOne -> {Nil} }"
snapshot_kind: text
---
----- SOURCE CODE
case 21 { twentyOne -> {Nil} }

----- ERROR
error: Invalid variable name
  ┌─ /src/one/two.gleam:1:11
  │
1 │ case 21 { twentyOne -> {Nil} }
  │           ^^^^^^^^^ This is not a valid variable name

Hint: Variable names start with a lowercase letter and contain a-z, 0-9, or
_.
Try: twenty_one
